[gd_scene load_steps=26 format=3 uid="uid://dscfe31h6tmyx"]

[ext_resource type="Script" path="res://scenes/phoenix_enemy.gd" id="1_c4c07"]
[ext_resource type="Texture2D" uid="uid://kqs3wo77vk4j" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0000.png" id="2_nlwt2"]
[ext_resource type="Texture2D" uid="uid://day5whx6kukva" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0001.png" id="3_dd74a"]
[ext_resource type="Texture2D" uid="uid://bp6sva8ebhuuv" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0002.png" id="4_a5ffb"]
[ext_resource type="Texture2D" uid="uid://c15n6o7vi5pft" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0003.png" id="5_n7ooi"]
[ext_resource type="Texture2D" uid="uid://cdse6j7bxevti" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0004.png" id="6_vtbvk"]
[ext_resource type="Texture2D" uid="uid://bopjmf6xev8h6" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0005.png" id="7_dgiff"]
[ext_resource type="Texture2D" uid="uid://xtq6nx362hrn" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0006.png" id="8_y3qrb"]
[ext_resource type="Texture2D" uid="uid://7j31rxxxdi88" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0007.png" id="9_mwsm7"]
[ext_resource type="Texture2D" uid="uid://b7tiw4xdc06xo" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0008.png" id="10_cn5ri"]
[ext_resource type="Texture2D" uid="uid://23bt23rohwdo" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0009.png" id="11_d25ue"]
[ext_resource type="Texture2D" uid="uid://csx0upm7lbx1i" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0010.png" id="12_b1l3b"]
[ext_resource type="Texture2D" uid="uid://21j53dgw8npu" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0011.png" id="13_0opd3"]
[ext_resource type="Texture2D" uid="uid://bauc5e46dupkl" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0012.png" id="14_h0sad"]
[ext_resource type="Texture2D" uid="uid://bns5pa8hawehb" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0013.png" id="15_33gq8"]
[ext_resource type="Texture2D" uid="uid://chb8w2meaqmdu" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0014.png" id="16_arhsc"]
[ext_resource type="Texture2D" uid="uid://bdrvn3b56scr6" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0015.png" id="17_beeil"]
[ext_resource type="Texture2D" uid="uid://73swhdkxfgu" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0016.png" id="18_7d21h"]
[ext_resource type="Texture2D" uid="uid://dsf1jsqq77wru" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0017.png" id="19_6kimn"]
[ext_resource type="Texture2D" uid="uid://djcgew1tif1to" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0018.png" id="20_p5lgl"]
[ext_resource type="Texture2D" uid="uid://bjlp1rotcp03w" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0019.png" id="21_t072r"]
[ext_resource type="Texture2D" uid="uid://bpf2r30xehy3s" path="res://assets/Character Animations/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS-20240124T020732Z-001/Phoenix_Boss_Sequence_PLEASE PLAY AT 30FPS/Phoenix_Boss_Sequence0020.png" id="22_k6xsg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mqjx1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nlwt2")
}, {
"duration": 1.0,
"texture": ExtResource("3_dd74a")
}, {
"duration": 1.0,
"texture": ExtResource("4_a5ffb")
}, {
"duration": 1.0,
"texture": ExtResource("5_n7ooi")
}, {
"duration": 1.0,
"texture": ExtResource("6_vtbvk")
}, {
"duration": 1.0,
"texture": ExtResource("7_dgiff")
}, {
"duration": 1.0,
"texture": ExtResource("8_y3qrb")
}, {
"duration": 1.0,
"texture": ExtResource("9_mwsm7")
}, {
"duration": 1.0,
"texture": ExtResource("10_cn5ri")
}, {
"duration": 1.0,
"texture": ExtResource("11_d25ue")
}, {
"duration": 1.0,
"texture": ExtResource("12_b1l3b")
}, {
"duration": 1.0,
"texture": ExtResource("13_0opd3")
}, {
"duration": 1.0,
"texture": ExtResource("14_h0sad")
}, {
"duration": 1.0,
"texture": ExtResource("15_33gq8")
}, {
"duration": 1.0,
"texture": ExtResource("16_arhsc")
}, {
"duration": 1.0,
"texture": ExtResource("17_beeil")
}, {
"duration": 1.0,
"texture": ExtResource("18_7d21h")
}, {
"duration": 1.0,
"texture": ExtResource("19_6kimn")
}, {
"duration": 1.0,
"texture": ExtResource("20_p5lgl")
}, {
"duration": 1.0,
"texture": ExtResource("21_t072r")
}, {
"duration": 1.0,
"texture": ExtResource("22_k6xsg")
}],
"loop": true,
"name": &"_default",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7wgtk"]
radius = 49.0408

[sub_resource type="CircleShape2D" id="CircleShape2D_no7i6"]
radius = 707.12

[node name="Phoenix Enemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_c4c07")

[node name="phoenixDude" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -40)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_mqjx1")
animation = &"_default"
frame_progress = 0.831753
flip_h = true

[node name="Enemycollisionbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_7wgtk")

[node name="targetingRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="targetingRange"]
shape = SubResource("CircleShape2D_no7i6")

[node name="enemyInvincibleFrames" type="Timer" parent="."]
wait_time = 0.4

[node name="attackCooldownEnemy" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="sporeOrigin" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-17, -34)
